force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/LeadOppScore__LO_Score_Settings__c.object-meta.xml
<CustomObject>
    <label>Score Settings</label>
    <nameField>
        <displayFormat>LO-{000000}</displayFormat>
        <label>LO Score Settings S.No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>