force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Activate__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>