force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Check_Field__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Check_Field__c</fullName>
    <label>Check Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>