force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Formula__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Formula__c</fullName>
    <label>Formula</label>
    <length>82768</length>
    <type>LongTextArea</type>
</CustomField>