force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Object__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>