force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Selected_Users__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Selected_Users__c</fullName>
    <label>Selected Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>