force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Setting_Type__c</fullName>
    <label>Setting Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadOppScore__Validation_Rule__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Validation Rule</fullName>
            </value>
            <value>
                <fullName>Assign Owner</fullName>
            </value>
            <value>
                <fullName>Send Notification Email to Users</fullName>
                <isActive>false</isActive>
                <label>Send Notification Email to Users</label>
            </value>
            <value>
                <fullName>Send Welcome Email to Customer</fullName>
                <isActive>false</isActive>
                <label>Send Welcome Email to Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>