force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__User__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LO_Score_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>