force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Validation_Rule__c</fullName>
    <label>Validation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Exists</fullName>
            </value>
            <value>
                <fullName>Valid Email</fullName>
            </value>
            <value>
                <fullName>Phone Number Exists</fullName>
            </value>
            <value>
                <fullName>Valid Phone Number</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mobile Phone Format</fullName>
                <isActive>false</isActive>
                <label>Mobile Phone Format</label>
            </value>
            <value>
                <fullName>Mobile Phone Required</fullName>
                <isActive>false</isActive>
                <label>Mobile Phone Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>