force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/fields/LeadOppScore__Your_Formula__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Your_Formula__c</fullName>
    <inlineHelpText>You can create your Own formula using Apex functions</inlineHelpText>
    <label>Your Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>