force-app/main/default/objects/LeadOppScore__LO_Score_Settings__c/listViews/LeadOppScore__All.listView-meta.xml
<ListView>
    <fullName>LeadOppScore__All</fullName>
    <columns>NAME</columns>
    <columns>LeadOppScore__Activate__c</columns>
    <columns>LeadOppScore__Check_Field__c</columns>
    <columns>LeadOppScore__Lead_Score__c</columns>
    <columns>LeadOppScore__Object__c</columns>
    <columns>LeadOppScore__Selected_Users__c</columns>
    <columns>LeadOppScore__Setting_Type__c</columns>
    <columns>LeadOppScore__User__c</columns>
    <columns>LeadOppScore__Validation_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>